# ATP2022

./: .gitignore  ACC_Project_test_plan.html  ACC_Project_test_plan.md  ProjectACC_RMD.rmd  README.html  README.md  codeIdeas.opengpt  g.html  h.html  k.html  main.py  promt.md  redis-memory-remote  sensorOne.py
car_constants/: ferrari.json
hardwareAbstraction/: hardwareDummy.py
projectTestPlan/: ProjectACC_RMD.rmd  g.html  h.html  testplan.txt
src/: .actuator_sensor_interfaceRAM.pBAKy  .ruff.toml  CarParamsManager.py  PIDsetter.py  WheelSpeedSensorBinded.py  actuator_sensor_interface.py  actuator_sensor_interfaceRAM.py  calculator.py  combined_interface.py  dashboard.py  dump.rdb  frpCPU.py  gas_rem_sender.py  inputReality.py  reality.py  redis-memory-remote  run_scripts.sh  simulator.py  simulatorRAM.py  start_script.sh
src/WheelSpeedCPP/: reader.py
src/WheelSpeedCPP/aaaa/: CMakeLists.txt  aaaa.cpp  bindings.cpp
src/car_constants/: ferrari.json  hatchback.json  suv.json
src/cplpl/WheelSpeedSensor/: CMakeLists.txt  aaaa.cpp  aaaa.h  bindings.cpp  reader.py  wspRead.py
src/cplpl/aaaa/: aaaa.cpp  aaaa.h  reader.py  wspRead.py
src/cplpl/whespesen/: CMakeLists.txt  main.cpp
src/cpp/: CMakeLists.txt  binding.cpp  speed_sensor.cpp
src/cpp/WheelSpeedSensor/: CMakeLists.txt  WSS_binded  WheelSpeedSensor.cpp  WheelSpeedSensor.h  bindings.cpp  wssPy.py
src/pid_tuning/: autoPidsetter.py
tests/: README.html  README.md  newtests.py
tests/SysteemTest/: TestAdaptedInputReality.py
tests/UnitTest/: NOERROR  UNIT_test_Speedsensor.py  tttt  unit_one_text_log
(+5 files in other folders)
